@@ -584,7 +584,7 @@ if (defined('CATMGR_PHP')) $lang_catmgr_php = array(
 if (defined('ADMIN_PHP')) $lang_admin_php = array(
   'title' => 'Configurazione galleria', //cpg1.4
   'manage_exif' => 'Gestione dati EXIF', //cpg1.4
-  'manage_plugins' => 'Gestione plugins', //cpg1.4
+  'manage_plugins' => 'Gestione plugin', //cpg1.4
   'manage_keyword' => 'Gestione parole chiave', //cpg1.4
   'restore_cfg' => 'Ripristina impostazioni di sistema',
   'save_cfg' => 'Salva nuova configurazione',
@@ -1133,7 +1133,7 @@ if (defined('EDITPICS_PHP')) $lang_editpics_php = array(
   'reset_all_votes' => 'Azzera TUTTI i voti', //cpg1.4
   'del_comm' => 'Cancella commenti',
   'del_all_comm' => 'Cancella TUTTI i commenti', //cpg1.4
-  'upl_approval' => 'Approvazione caricamento', //cpg1.4
+  'upl_approval' => 'Approvazione file caricati', //cpg1.4
   'edit_pics' => 'Modifica file',
   'see_next' => 'Visualizza file successivi',
   'see_prev' => 'Visualizza file precedenti',
@@ -1733,13 +1733,13 @@ if (defined('UPLOAD_PHP')) $lang_upload_php = array(
   'cust_instr_6' => 'Campi per il caricamento file:',
   'cust_instr_7' => 'Inserisci il numero di ogni tipo di campo per il caricamento che desideri.  Quindi clicca \'Continua\'. ',
   'reg_instr_1' => 'Azione non valida per la creazione del modulo.',
-  'reg_instr_2' => 'Da questa pagina caricare i tuoi file utilizzando i campi qui sotto. I file da caricare non devono superare i %s KB ciascuno. I file di tipo ZIP rimarranno compressi.',
+  'reg_instr_2' => 'Da questa pagina puoi caricare i tuoi file utilizzando i campi qui sotto. I file da caricare non devono superare i %s KB ciascuno. I file di tipo ZIP rimarranno compressi.',
   'reg_instr_3' => 'Se desideri che il file compresso venga decompresso, devi usare il campo per il caricamento nell\'area  \'Caricamento e decompressione ZIP\'.',
   'reg_instr_4' => 'Quando usi la funzione di caricamento URI/URL, inserisci il percorso del file in questo modo: http://www.miosito.com/immagini/esempio.jpg',
   'reg_instr_5' => 'Una volta selezionati i file o URI/URL da caricare, clicca su \'Continua\'.',
   'reg_instr_6' => 'Caricamento e decompressione ZIP:',
-  'reg_instr_7' => 'File caricati:',
-  'reg_instr_8' => 'URI/URL caricati:',
+  'reg_instr_7' => 'File da caricare:',
+  'reg_instr_8' => 'URI/URL da caricare:',
   'error_report' => 'Errore',
   'error_instr' => 'I seguenti caricamenti hanno creato errori:',
   'file_name_url' => 'Nome/URL file',
@@ -1749,7 +1749,7 @@ if (defined('UPLOAD_PHP')) $lang_upload_php = array(
   'exc_php_ini' => 'Dimensione file eccedente quella consentita da PHP.',
   'exc_file_size' => 'Dimensione file eccedente quella consentita dalla Galleria.',
   'partial_upload' => 'Caricamento solo parziale.',
-  'no_upload' => 'Nessun file caricameto.',
+  'no_upload' => 'Nessun file caricato.',
   'unknown_code' => 'Errore PHP sconosciuto nel caricamento.',
   'no_temp_name' => 'Nessun file caricato - Nessun nome temporaneo.',
   'no_file_size' => 'Non contiene nessun dato/Corrotto',
